--- a/src/pubspec.yaml
+++ b/src/pubspec.yaml
@@ -16,13 +16,15 @@ dependencies:
     sdk: flutter
   stacked: ^3.4.2    
   stacked_services: ^1.4.0
-  logger: ^1.4.0
+  logger: ^2.4.0
   flutter_localizations:
     sdk: flutter
-  url_launcher: ^6.3.0    
+  url_launcher: ^6.3.0
+  retrofit: ^4.4.0
+  json_annotation: ^4.9.0
 
 dev_dependencies:
-  build_runner: ^2.4.5
+  build_runner: ^2.3.3
   flutter_lints: ^3.0.1  
   flutter_test:
     sdk: flutter
@@ -31,6 +33,7 @@ dev_dependencies:
   mocktail: ^1.0.4
   stacked_generator: ^1.3.3  
   very_good_analysis: ^6.0.0
+  retrofit_generator: '>=8.0.0 <10.0.0'
 
 flutter:
   uses-material-design: true
